feat: :sparkles: implementação de botão de wpp

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,6 +82,10 @@
     font-family: var(--montserrat);
    }
 
+   button{
+    font-family: var(--montserrat);
+   }
+
    p{
     font-family: var(--poppins);
    }
